package by.itstep.j1022.JB.view;

public class ConsolePrinter implements Printable {

    @Override
    public void print(String msg) {
        System.out.println(msg);
    }
}
