package by.itstep.j1022.JB.view;

public interface Printable {

     void print(String msg);
}
